ros2_tutorial/nhat/tutorial_ws/log/build_2023-04-20_15-24-44/sim_tut/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/will/tutorial_ws/install/sim_tut/lib/python3.10/site-packages/sim_tut/sensor.py", line 41
    if point.z > 0 and abs(point.y) < 2 distance < 5.0:
                                        ^^^^^^^^
SyntaxError: invalid syntax

